# frontend-qt

./: CMakeLists.txt  LICENSE.md  README.md
src/: CMakeLists.txt
src/common/: CMakeLists.txt  qplaylistmodel.cpp  qplaylistmodel.hpp  qpresetfiledialog.hpp  qprojectm.hpp  qprojectm_mainwindow.cpp  qprojectm_mainwindow.hpp  qprojectmconfigdialog.cpp
src/ui-jack/: CMakeLists.txt  qprojectM-jack.cpp
src/ui-pulseaudio/: CMakeLists.txt  QPulseAudioDeviceModel.hpp  QPulseAudioThread.cpp  qprojectM-pulseaudio.cpp
